<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_tags"
        android:icon="@drawable/ic_tag"
        android:title="@string/tags"
        app:showAsAction="withText" />

    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_bookmarcs"
        android:title="@string/bookmarks"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="withText" />

</menu>