<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_dark"
        app:layout_scrollFlags="scroll|enterAlways">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                app:srcCompat="@drawable/ic_logo" />


            <ImageView
                android:id="@+id/btn_about"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="24dp"
                app:srcCompat="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/tab_title"
                android:textColor="@color/primary_light"
                android:textSize="19sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_dark"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:hint="@string/search_hint"
                android:textColor="@color/divider"
                android:textColorHint="@color/search"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_search"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="16dp"
                android:tint="@color/search"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_search" />

        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"  />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/primary_light"
        app:menu="@menu/menu" />

</LinearLayout>

